add function upad  load and insert library

--- a/Client/PortalAdmin/PortalAdmin/index.html
+++ b/Client/PortalAdmin/PortalAdmin/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="../../content/login-temple/vendor/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="../../content/login-temple/css/util.css">
     <link rel="stylesheet" type="text/css" href="../../content/login-temple/css/main.css">
-
+    <link href="views/pages/library/libraryStyle.css" rel="stylesheet" />
     <link href="content/lib/toastmessage/css/jquery.toastmessage.css" rel="stylesheet" />
 
 </head>
@@ -38,6 +38,8 @@
     <!--===============================================================================================-->
     <script src="../../content/login-temple/vendor/countdowntime/countdowntime.js"></script>
     <script src="content/lib/toastmessage/jquery.toastmessage.js"></script>
+
+    <script src="content/lib/loading/loadingoverlay.min.js"></script>
     <!--=========================================CONFIG ANGULARJS======================================================-->
     <!--angular-->
     <script src="../../content/lib/angular.js/angular.js"></script>
@@ -62,6 +64,7 @@
     <script src="../../src/api/api.js"></script>
     <script src="src/services/service.js"></script>
     <script src="../../src/common/common.js"></script>
+    <script src="src/directive/directive.js"></script>
     <script src="../../src/controllers/loginCtrl/loginCtrl.js"></script>
     <script src="src/controllers/homeCtrl/homeCtrl.js"></script>
     <script src="src/controllers/libraryCtrl/libraryCtrl.js"></script>
